Fixing structure and files

--- a/packetsniffer/Makefile
+++ b/packetsniffer/Makefile
@@ -6,6 +6,9 @@ INTERFACE=$(INTERFACE)
 
 # Setup dependencies
 setup:
+	go mod init github.com/username/packetsniffer
+	go get github.com/google/gopacket
+	go get github.com/google/gopacket/pcap
 	go mod tidy
 
 # Build the binary
@@ -19,6 +22,8 @@ run: build
 # Clean the build
 clean:
 	rm -f $(BINARY_NAME)
+	rm -f go.mod
+	rm -f go.sum
 
 # Phony targets
 .PHONY: setup build run clean
