--- a/netstat/Makefile
+++ b/netstat/Makefile
@@ -1,14 +1,11 @@
 # Makefile
 
 # Variables
-BINARY_NAME=packetsniffer
-INTERFACE=$(INTERFACE)
+BINARY_NAME=netstat
 
 # Setup dependencies
 setup:
-	go mod init github.com/username/packetsniffer
-	go get github.com/google/gopacket
-	go get github.com/google/gopacket/pcap
+	go mod init github.com/username/netstat
 	go mod tidy
 
 # Build the binary
@@ -17,7 +14,7 @@ build:
 
 # Run the application
 run: build
-	sudo ./$(BINARY_NAME) $(INTERFACE)
+	./$(BINARY_NAME)
 
 # Clean the build
 clean:
