--- a/portforwarding/Makefile
+++ b/portforwarding/Makefile
@@ -1,14 +1,13 @@
 # Makefile
 
 # Variables
-BINARY_NAME=packetsniffer
-INTERFACE=$(INTERFACE)
+BINARY_NAME=portforwarding
+LISTEN=$(LISTEN_PORT)
+SEND=$(TARGET)
 
 # Setup dependencies
 setup:
-	go mod init github.com/username/packetsniffer
-	go get github.com/google/gopacket
-	go get github.com/google/gopacket/pcap
+	go mod init github.com/username/portforwarding
 	go mod tidy
 
 # Build the binary
@@ -17,7 +16,7 @@ build:
 
 # Run the application
 run: build
-	sudo ./$(BINARY_NAME) $(INTERFACE)
+	./$(BINARY_NAME) $(LISTEN) $(SEND)
 
 # Clean the build
 clean:
