--- a/smtpclient/Makefile
+++ b/smtpclient/Makefile
@@ -1,14 +1,17 @@
 # Makefile
 
 # Variables
-BINARY_NAME=packetsniffer
-INTERFACE=$(INTERFACE)
+BINARY_NAME=smtpclient
+SERVER_NAME=$(SERVER)
+PORT_NUMBER=$(PORT)
+FROM_ADDR=$(FROM)
+TO_ADDR=$(TO)
+SUBJ=$(SUBJECT)
+BODYDATA=$(BODY)
 
 # Setup dependencies
 setup:
-	go mod init github.com/username/packetsniffer
-	go get github.com/google/gopacket
-	go get github.com/google/gopacket/pcap
+	go mod init github.com/username/smtpclient
 	go mod tidy
 
 # Build the binary
@@ -17,7 +20,7 @@ build:
 
 # Run the application
 run: build
-	sudo ./$(BINARY_NAME) $(INTERFACE)
+	./$(BINARY_NAME) $(SERVER_NAME) $(PORT_NUMBER) "$(FROM_ADDR)" "$(TO_ADDR)" "$(SUBJ)" "$(BODYDATA)"
 
 # Clean the build
 clean:
