--- a/webscraper/Makefile
+++ b/webscraper/Makefile
@@ -1,14 +1,14 @@
 # Makefile
 
 # Variables
-BINARY_NAME=packetsniffer
-INTERFACE=$(INTERFACE)
+BINARY_NAME=webscraper
+URL=$(URL)
+SELECTOR=$(SELECTOR)
 
 # Setup dependencies
 setup:
-	go mod init github.com/username/packetsniffer
-	go get github.com/google/gopacket
-	go get github.com/google/gopacket/pcap
+	go mod init github.com/username/webscraper
+	go get github.com/PuerkitoBio/goquery
 	go mod tidy
 
 # Build the binary
@@ -17,7 +17,7 @@ build:
 
 # Run the application
 run: build
-	sudo ./$(BINARY_NAME) $(INTERFACE)
+	./$(BINARY_NAME) $(URL) $(SELECTOR)
 
 # Clean the build
 clean:
