Added 'complete' command to makefile that will do a clean, setup, build and then run with basic example just to quickly test if it work

--- a/bandwidthmonitor/Makefile
+++ b/bandwidthmonitor/Makefile
@@ -25,5 +25,8 @@ clean:
 	rm -f go.mod
 	rm -f go.sum
 
+complete: clean setup build
+	sudo ./$(BINARY_NAME) en0
+
 # Phony targets
-.PHONY: setup build run clean
+.PHONY: setup build run clean complete
