--- a/traceroute/Makefile
+++ b/traceroute/Makefile
@@ -25,5 +25,8 @@ clean:
 	rm -f go.mod
 	rm -f go.sum
 
+complete: clean setup build
+	./$(BINARY_NAME) www.google.com
+
 # Phony targets
-.PHONY: setup build run clean
+.PHONY: setup build run clean complete
