--- a/netscan/Makefile
+++ b/netscan/Makefile
@@ -25,5 +25,8 @@ clean:
 	rm -f go.mod
 	rm -f go.sum
 
+complete: clean setup build
+	./$(BINARY_NAME) 127.0.0.1 1 1024
+
 # Phony targets
-.PHONY: setup build run clean
+.PHONY: setup build run clean complete
