--- a/netstat/Makefile
+++ b/netstat/Makefile
@@ -22,5 +22,8 @@ clean:
 	rm -f go.mod
 	rm -f go.sum
 
+complete: clean setup build
+	./$(BINARY_NAME)
+
 # Phony targets
-.PHONY: setup build run clean
+.PHONY: setup build run clean complete
