Updated complete command and working-list

--- a/httpsclient/Makefile
+++ b/httpsclient/Makefile
@@ -23,5 +23,8 @@ clean:
 	rm -f go.mod
 	rm -f go.sum
 
+complete: clean setup build
+	./$(BINARY_NAME) https://www.google.com
+
 # Phony targets
-.PHONY: setup build run clean
+.PHONY: setup build run clean complete
