--- a/sshserver/Makefile
+++ b/sshserver/Makefile
@@ -27,5 +27,8 @@ clean:
 	rm -f cert.pem
 	rm -f key.pem
 
+complete: clean setup build
+	./$(BINARY_NAME) 4567 key.pem
+
 # Phony targets
-.PHONY: setup build run clean
+.PHONY: setup build run clean complete
