--- a/telnetserver/Makefile
+++ b/telnetserver/Makefile
@@ -23,5 +23,8 @@ clean:
 	rm -f go.mod
 	rm -f go.sum
 
+complete: clean setup build
+	./$(BINARY_NAME) 3456
+
 # Phony targets
-.PHONY: setup build run clean
+.PHONY: setup build run clean complete
