--- a/whois/Makefile
+++ b/whois/Makefile
@@ -23,5 +23,8 @@ clean:
 	rm -f go.mod
 	rm -f go.sum
 
+complete: clean setup build
+	./$(BINARY_NAME) codedv8.dev
+
 # Phony targets
-.PHONY: setup build run clean
+.PHONY: setup build run clean complete
