--- a/ftpsclient/Makefile
+++ b/ftpsclient/Makefile
@@ -2,13 +2,15 @@
 
 # Variables
 BINARY_NAME=packetsniffer
-INTERFACE=$(INTERFACE)
+SERVER_ADDRESS=$(SERVER)
+USERNAME=$(USER)
+PASSW=$(PASSWORD)
+FILE=$(FILEPATH)
 
 # Setup dependencies
 setup:
 	go mod init github.com/username/packetsniffer
-	go get github.com/google/gopacket
-	go get github.com/google/gopacket/pcap
+	go get github.com/jlaffaye/ftp
 	go mod tidy
 
 # Build the binary
@@ -17,7 +19,7 @@ build:
 
 # Run the application
 run: build
-	sudo ./$(BINARY_NAME) $(INTERFACE)
+	./$(BINARY_NAME) $(SERVER_ADDRESS) $(USERNAME) $(PASSW) $(FILE)
 
 # Clean the build
 clean:
@@ -26,7 +28,7 @@ clean:
 	rm -f go.sum
 
 complete: clean setup build
-	./$(BINARY_NAME) en0
+	./$(BINARY_NAME) 127.0.0.1:3254 admin admin /file1.txt
 
 # Phony targets
 .PHONY: setup build run clean complete
