--- a/packetsniffer/Makefile
+++ b/packetsniffer/Makefile
@@ -3,6 +3,7 @@
 # Variables
 BINARY_NAME=packetsniffer
 INTERFACE=$(INTERFACE)
+OS := $(shell uname)
 
 # Setup dependencies
 setup:
@@ -17,6 +18,14 @@ build:
 
 # Run the application
 run: build
+ifeq ($(OS),Darwin)
+	# macOS: Default interface is en0
+	INTERFACE ?= en0
+endif
+ifeq ($(OS),Linux)
+	# Linux: Default interface is eth0, wlan0 could also be an option
+	INTERFACE ?= eth0
+endif
 	sudo ./$(BINARY_NAME) $(INTERFACE)
 
 # Clean the build
@@ -26,7 +35,14 @@ clean:
 	rm -f go.sum
 
 complete: clean setup build
+ifeq ($(OS),Darwin)
+	# macOS: Default interface is en0
 	./$(BINARY_NAME) en0
+endif
+ifeq ($(OS),Linux)
+	# Linux: Default interface is eth0
+	./$(BINARY_NAME) eth0
+endif
 
 # Phony targets
 .PHONY: setup build run clean complete
