--- a/netstat/Makefile
+++ b/netstat/Makefile
@@ -2,6 +2,13 @@
 
 # Variables
 BINARY_NAME=netstat
+EXT=
+RM=rm -f
+ifeq ($(OS),Windows_NT)
+    EXT=.exe
+	RM=del /Q
+endif
+BINARY=$(BINARY_NAME)$(EXT)
 
 # Setup dependencies
 setup:
@@ -10,7 +17,7 @@ setup:
 
 # Build the binary
 build:
-	go build -o $(BINARY_NAME) main.go
+	go build -o $(BINARY) main.go
 
 # Run the application
 run: build
@@ -18,9 +25,9 @@ run: build
 
 # Clean the build
 clean:
-	rm -f $(BINARY_NAME)
-	rm -f go.mod
-	rm -f go.sum
+	$(RM) $(BINARY_NAME)
+	$(RM) go.mod
+	$(RM) go.sum
 
 complete: clean setup build
 	./$(BINARY_NAME)
