--- a/packetsniffer/Makefile
+++ b/packetsniffer/Makefile
@@ -2,6 +2,13 @@
 
 # Variables
 BINARY_NAME=packetsniffer
+EXT=
+RM=rm -f
+ifeq ($(OS),Windows_NT)
+    EXT=.exe
+	RM=del /Q
+endif
+BINARY=$(BINARY_NAME)$(EXT)
 INTERFACE=$(INTERFACE)
 OS := $(shell uname)
 
@@ -14,7 +21,7 @@ setup:
 
 # Build the binary
 build:
-	go build -o $(BINARY_NAME) main.go
+	go build -o $(BINARY) main.go
 
 # Run the application
 run: build
@@ -26,22 +33,22 @@ ifeq ($(OS),Linux)
 	# Linux: Default interface is eth0, wlan0 could also be an option
 	INTERFACE ?= eth0
 endif
-	sudo ./$(BINARY_NAME) $(INTERFACE)
+	sudo ./$(BINARY) $(INTERFACE)
 
 # Clean the build
 clean:
-	rm -f $(BINARY_NAME)
-	rm -f go.mod
-	rm -f go.sum
+	$(RM) $(BINARY_NAME)
+	$(RM) go.mod
+	$(RM) go.sum
 
 complete: clean setup build
 ifeq ($(OS),Darwin)
 	# macOS: Default interface is en0
-	./$(BINARY_NAME) en0
+	./$(BINARY) en0
 endif
 ifeq ($(OS),Linux)
 	# Linux: Default interface is eth0
-	./$(BINARY_NAME) eth0
+	./$(BINARY) eth0
 endif
 
 # Phony targets
