--- a/portknocking/Makefile
+++ b/portknocking/Makefile
@@ -2,6 +2,13 @@
 
 # Variables
 BINARY_NAME=portknocking
+EXT=
+RM=rm -f
+ifeq ($(OS),Windows_NT)
+    EXT=.exe
+	RM=del /Q
+endif
+BINARY=$(BINARY_NAME)$(EXT)
 HOST=$(HOSTNAME)
 DELAY=$(DELAYMS)
 PORT1=$(PORT_1)
@@ -13,20 +20,20 @@ setup:
 
 # Build the binary
 build:
-	go build -o $(BINARY_NAME) main.go
+	go build -o $(BINARY) main.go
 
 # Run the application
 run: build
-	./$(BINARY_NAME) $(HOST) $(DELAY) $(PORT1) $(PORT2)
+	./$(BINARY) $(HOST) $(DELAY) $(PORT1) $(PORT2)
 
 # Clean the build
 clean:
-	rm -f $(BINARY_NAME)
-	rm -f go.mod
-	rm -f go.sum
+	$(RM) $(BINARY_NAME)
+	$(RM) go.mod
+	$(RM) go.sum
 
 complete: clean setup build
-	./$(BINARY_NAME) 127.0.0.1 1000 1234 5678
+	./$(BINARY) 127.0.0.1 1000 1234 5678
 
 # Phony targets
 .PHONY: setup build run clean complete
