--- a/smtpclient/Makefile
+++ b/smtpclient/Makefile
@@ -2,6 +2,13 @@
 
 # Variables
 BINARY_NAME=smtpclient
+EXT=
+RM=rm -f
+ifeq ($(OS),Windows_NT)
+    EXT=.exe
+	RM=del /Q
+endif
+BINARY=$(BINARY_NAME)$(EXT)
 SERVER_NAME=$(SERVER)
 PORT_NUMBER=$(PORT)
 FROM_ADDR=$(FROM)
@@ -16,20 +23,20 @@ setup:
 
 # Build the binary
 build:
-	go build -o $(BINARY_NAME) main.go
+	go build -o $(BINARY) main.go
 
 # Run the application
 run: build
-	./$(BINARY_NAME) $(SERVER_NAME) $(PORT_NUMBER) "$(FROM_ADDR)" "$(TO_ADDR)" "$(SUBJ)" "$(BODYDATA)"
+	./$(BINARY) $(SERVER_NAME) $(PORT_NUMBER) "$(FROM_ADDR)" "$(TO_ADDR)" "$(SUBJ)" "$(BODYDATA)"
 
 # Clean the build
 clean:
-	rm -f $(BINARY_NAME)
-	rm -f go.mod
-	rm -f go.sum
+	$(RM) $(BINARY_NAME)
+	$(RM) go.mod
+	$(RM) go.sum
 
 complete: clean setup build
-	./$(BINARY_NAME) 127.0.0.1 23456 "tess.t@example.com" "person@example.com" "\"Test email\"" "\"This is a test email\""
+	./$(BINARY) 127.0.0.1 23456 "tess.t@example.com" "person@example.com" "\"Test email\"" "\"This is a test email\""
 
 # Phony targets
 .PHONY: setup build run clean complete
