--- a/webcrawler/Makefile
+++ b/webcrawler/Makefile
@@ -2,6 +2,13 @@
 
 # Variables
 BINARY_NAME=webcrawler
+EXT=
+RM=rm -f
+ifeq ($(OS),Windows_NT)
+    EXT=.exe
+	RM=del /Q
+endif
+BINARY=$(BINARY_NAME)$(EXT)
 URL=$(URL)
 
 # Setup dependencies
@@ -12,20 +19,20 @@ setup:
 
 # Build the binary
 build:
-	go build -o $(BINARY_NAME) main.go
+	go build -o $(BINARY) main.go
 
 # Run the application
 run: build
-	./$(BINARY_NAME) $(URL)
+	./$(BINARY) $(URL)
 
 # Clean the build
 clean:
-	rm -f $(BINARY_NAME)
-	rm -f go.mod
-	rm -f go.sum
+	$(RM) $(BINARY_NAME)
+	$(RM) go.mod
+	$(RM) go.sum
 
 complete: clean setup build
-	./$(BINARY_NAME) https://github.com/codedeviate/Build-Your-Own-Tools-In-Go/blob/master/README.md
+	./$(BINARY) https://github.com/codedeviate/Build-Your-Own-Tools-In-Go/blob/master/README.md
 
 # Phony targets
 .PHONY: setup build run clean complete
