--- a/hash/Makefile
+++ b/hash/Makefile
@@ -2,6 +2,13 @@
 
 # Variables
 BINARY_NAME=hash
+EXT=
+RM=rm -f
+ifeq ($(OS),Windows_NT)
+    EXT=.exe
+	RM=del /Q
+endif
+BINARY=$(BINARY_NAME)$(EXT)
 INPUT_DATA=$(INPUT)
 
 # Setup dependencies
@@ -11,23 +18,23 @@ setup:
 
 # Build the binary
 build:
-	go build -o $(BINARY_NAME) main.go
+	go build -o $(BINARY) main.go
 
 # Run the application
 run: build
-	sudo ./$(BINARY_NAME) --input "$(INPUT_DATA)"
+	sudo ./$(BINARY) --input "$(INPUT_DATA)"
 
 # Clean the build
 clean:
-	rm -f $(BINARY_NAME)
-	rm -f go.mod
-	rm -f go.sum
+	$(RM) $(BINARY_NAME)
+	$(RM) go.mod
+	$(RM) go.sum
 
 complete: clean setup build
-	./$(BINARY_NAME) --input "Hello, World!"
-	./$(BINARY_NAME) --input "Hello, World!" --algorithm sha1
-	./$(BINARY_NAME) --input "Hello, World!" --algorithm sha512
-	./$(BINARY_NAME) --input "Hello, World!" --algorithm md5
+	./$(BINARY) --input "Hello, World!"
+	./$(BINARY) --input "Hello, World!" --algorithm sha1
+	./$(BINARY) --input "Hello, World!" --algorithm sha512
+	./$(BINARY) --input "Hello, World!" --algorithm md5
 
 # Phony targets
 .PHONY: setup build run clean complete
