--- a/httpsserver/Makefile
+++ b/httpsserver/Makefile
@@ -2,6 +2,13 @@
 
 # Variables
 BINARY_NAME=httpsserver
+EXT=
+RM=rm -f
+ifeq ($(OS),Windows_NT)
+    EXT=.exe
+	RM=del /Q
+endif
+BINARY=$(BINARY_NAME)$(EXT)
 PORT=$(PORT)
 
 # Setup dependencies
@@ -12,22 +19,22 @@ setup:
 
 # Build the binary
 build:
-	go build -o $(BINARY_NAME) main.go
+	go build -o $(BINARY) main.go
 
 # Run the application
 run: build
-	./$(BINARY_NAME) $(PORT) cert.pem key.pem
+	./$(BINARY) $(PORT) cert.pem key.pem
 
 # Clean the build
 clean:
-	rm -f $(BINARY_NAME)
-	rm -f go.mod
-	rm -f go.sum
-	rm -f cert.pem
-	rm -f key.pem
+	$(RM) $(BINARY_NAME)
+	$(RM) go.mod
+	$(RM) go.sum
+	$(RM) cert.pem
+	$(RM) key.pem
 
 complete: clean setup build
-	./$(BINARY_NAME) 6789 cert.pem key.pem
+	./$(BINARY) 6789 cert.pem key.pem
 
 # Phony targets
 .PHONY: setup build run clean complete
