--- a/sshclient/Makefile
+++ b/sshclient/Makefile
@@ -2,6 +2,13 @@
 
 # Variables
 BINARY_NAME=sshclient
+EXT=
+RM=rm -f
+ifeq ($(OS),Windows_NT)
+    EXT=.exe
+	RM=del /Q
+endif
+BINARY=$(BINARY_NAME)$(EXT)
 USERNAME=$(USER)
 PASSW=$(PASSWORD)
 HOSTNAME=$(HOST)
@@ -15,20 +22,20 @@ setup:
 
 # Build the binary
 build:
-	go build -o $(BINARY_NAME) main.go
+	go build -o $(BINARY) main.go
 
 # Run the application
 run: build
-	./$(BINARY_NAME) $(USERNAME) $(PASSW) $(HOSTNAME) $(PORT_NUMBER) "$(CMD)"
+	./$(BINARY) $(USERNAME) $(PASSW) $(HOSTNAME) $(PORT_NUMBER) "$(CMD)"
 
 # Clean the build
 clean:
-	rm -f $(BINARY_NAME)
-	rm -f go.mod
-	rm -f go.sum
+	$(RM) $(BINARY_NAME)
+	$(RM) go.mod
+	$(RM) go.sum
 
 complete: clean setup build
-	./$(BINARY_NAME) "\"\"" "\"\"" "127.0.0.1" "4567" "ls -alF"
+	./$(BINARY) "\"\"" "\"\"" "127.0.0.1" "4567" "ls -alF"
 
 # Phony targets
 .PHONY: setup build run clean complete
