--- a/whois/Makefile
+++ b/whois/Makefile
@@ -2,6 +2,13 @@
 
 # Variables
 BINARY_NAME=whois
+EXT=
+RM=rm -f
+ifeq ($(OS),Windows_NT)
+    EXT=.exe
+	RM=del /Q
+endif
+BINARY=$(BINARY_NAME)$(EXT)
 DOMAIN=$(DOMAIN)
 
 # Setup dependencies
@@ -11,20 +18,20 @@ setup:
 
 # Build the binary
 build:
-	go build -o $(BINARY_NAME) main.go
+	go build -o $(BINARY) main.go
 
 # Run the application
 run: build
-	./$(BINARY_NAME) $(DOMAIN)
+	./$(BINARY) $(DOMAIN)
 
 # Clean the build
 clean:
-	rm -f $(BINARY_NAME)
-	rm -f go.mod
-	rm -f go.sum
+	$(RM) $(BINARY)
+	$(RM) go.mod
+	$(RM) go.sum
 
 complete: clean setup build
-	./$(BINARY_NAME) codedv8.dev
+	./$(BINARY) codedv8.dev
 
 # Phony targets
 .PHONY: setup build run clean complete
