--- a/ifinfo/Makefile
+++ b/ifinfo/Makefile
@@ -1,7 +1,7 @@
 # Makefile
 
 # Variables
-BINARY_NAME=dhcpclient
+BINARY_NAME=ifinfo
 EXT=
 RM=rm -f
 ifeq ($(OS),Windows_NT)
@@ -9,13 +9,10 @@ ifeq ($(OS),Windows_NT)
 	RM=del /Q
 endif
 BINARY=$(BINARY_NAME)$(EXT)
-INTERFACE=$(INTERFACE)
 
 # Setup dependencies
 setup:
-	go mod init github.com/username/dhcpclient
-	go get github.com/insomniacslk/dhcp/dhcpv{4,6}
-	go get -u golang.org/x/sys/unix
+	go mod init github.com/username/ifinfo
 	go mod tidy
 
 # Build the binary
@@ -24,7 +21,7 @@ build:
 
 # Run the application
 run: build
-	sudo ./$(BINARY) $(INTERFACE)
+	./$(BINARY)
 
 # Clean the build
 clean:
@@ -33,7 +30,7 @@ clean:
 	$(RM) go.sum
 
 complete: clean setup build
-	./$(BINARY) en0
+	./$(BINARY)
 
 # Phony targets
 .PHONY: setup build run clean complete
