Updated firewall and added certinfo

--- a/firewall/Makefile
+++ b/firewall/Makefile
@@ -1,7 +1,7 @@
 # Makefile
 
 # Variables
-BINARY_NAME=packetsniffer
+BINARY_NAME=firewall
 EXT=
 RM=rm -f
 ifeq ($(OS),Windows_NT)
@@ -13,9 +13,8 @@ INTERFACE=$(INTERFACE)
 
 # Setup dependencies
 setup:
-	go mod init github.com/username/packetsniffer
+	go mod init github.com/username/firewall
 	go get github.com/google/gopacket
-	go get github.com/google/gopacket/pcap
 	go mod tidy
 
 # Build the binary
